...
                .toggle(ActivityItem.analyzer),
          ),
          _buildActivityIcon(
            context,
            ref,
            icon: Icons.copy_all_outlined,
            tooltip: 'Explorer',
            isSelected: selected == ActivityItem.explorer,
            onTap: () => ref
                .read(selectedActivityProvider.notifier)
                .toggle(ActivityItem.explorer),
          ),
          _buildActivityIcon(
...
                .toggle(ActivityItem.sourceControl),
          ),
          _buildActivityIcon(
            context,
            ref,
            icon: Icons.bug_report_outlined,
            tooltip: 'Run and Debug',
            isSelected: selected == ActivityItem.debug,
            onTap: () => ref
                .read(selectedActivityProvider.notifier)
                .toggle(ActivityItem.debug),
          ),
          const SizedBox(height: 16),
...
